Bug fixed! Dentist and Patient can now edit his/her profile and after it be able to log in.

--- a/WebApplication1/WebApplication1/Views/Dentist/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Dentist/Index.cshtml
@@ -11,7 +11,7 @@
 <div class="container my-custom-container">
 <div class="profile-head">
 <div class="col-md- col-sm-4 col-xs-12">
-    <img src="~/Content/Images/DSC00261.JPG" class="img-responsive" />
+    <img src="http://www.newlifefamilychiropractic.net/wp-content/uploads/2014/07/300x300.gif" class="img-responsive" />
     <h6>@Html.DisplayFor(d => d.FirstName)
         @Html.DisplayFor(d => d.LastName)
     </h6>
@@ -48,7 +48,7 @@
                             </a>
                         </h4>
                     </div>
-                    <div id="collapseOne" class="panel-collapse collapse in">
+                    <div id="collapseOne" class="panel-collapse collapse">
                         <div class="panel-body">
                             <table class="table">
                                 <tr>
