--- a/WebApplication1/WebApplication1/Views/Account/Register.cshtml
+++ b/WebApplication1/WebApplication1/Views/Account/Register.cshtml
@@ -1,6 +1,7 @@
 ﻿@model WebApplication1.ViewModels.Account.RegisterViewModel
 <html>
 <head>
+
     <link href="~/Content/css/CustomLogin.css" rel="stylesheet" />
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
@@ -18,9 +19,11 @@
 </head>
 <body>
     <div class="container">
+        <link href="~/Content/css/CustomLogin.css" rel="stylesheet" />
         <div class="row">
-            <form method="post" class="form-signin mg-btm">
+            <form method="post" class="form-signin mg-btm" enctype="multipart/form-data">
                 <h3 class="heading-desc">
+
                     Register to DentisCard
                 </h3>
                 <div class="social-box">
@@ -31,13 +34,13 @@
                             </a>
                         </div>
                     </div>
+
                 </div>
                 @Html.AntiForgeryToken()
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="main">
-
-                   @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @placeholder="Email" })
-                    @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder="Password" })
+                <div class="main">                
+                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @placeholder = "Email" })
+                    @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Password" })
                     @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", @placeholder = "Confirm Password" })
 
                     <span class="clearfix"></span>
@@ -47,7 +50,6 @@
                         <div class="col-xs-6 col-md-6">
                             <div class="left-section">
                                 <a href="">Forgot your password?</a>
- 
                                 @Html.ActionLink("Login now", "Login", "Account")
                             </div>
                         </div>
@@ -63,3 +65,6 @@
 </body>
 </html>
 
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
