Several bugs that I made with scheduling are now gone and Patient can see his Dentist's schedule

--- a/WebApplication1/WebApplication1/Views/Dentist/MySchedule.cshtml
+++ b/WebApplication1/WebApplication1/Views/Dentist/MySchedule.cshtml
@@ -6,7 +6,6 @@
 }
 
 <h2>MySchedule</h2>
-<p>My schedule is still in progress, it will be soon InsaAllah!</p>
 
 @(Html.Kendo().Scheduler<Appointment>()
       .Name("scheduler")
@@ -25,6 +24,7 @@
               m.Id(f => f.Id);
               m.Field(f => f.Title).DefaultValue("No Title");
               m.Field(f => f.Description).DefaultValue("No Description");
+              m.Field(f => f.IsAccepted).DefaultValue(true);
           })
           .Read("Read", "Scheduler")
           .Create("Create", "Scheduler")
