--- a/WebApplication1/WebApplication1/Views/Shared/_LoginPartial.cshtml
+++ b/WebApplication1/WebApplication1/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,9 @@
-﻿@using Microsoft.AspNet.Identity
+﻿
+@using Microsoft.AspNet.Identity
+@using WebApplication1.Models
+@{
+    List<Appointment> appointments = ViewBag.appointmentRequests;
+}
 @if (Request.IsAuthenticated)
 {
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
@@ -15,10 +20,10 @@
                 <a href="#" data-toggle="dropdown" class="dropdown-toggle"><span class="glyphicon glyphicon-calendar"></span></a>
                 <ul class="dropdown-menu">
                     
-                    @*@foreach (var item in Model)
+                    @foreach (var item in appointments)
                     {
                         <li>@Html.DisplayFor(modelItem => item.Title)</li>
-                    }*@
+                    }
 
 
                 </ul>
